<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_exercise"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_menu_item_exerciese"
            android:checked="true"
            android:icon="@drawable/ic_exercise"
            android:title="@string/menu_exercise" />
        <item
            android:id="@+id/navigation_menu_item_schedules"
            android:icon="@drawable/ic_schedule"
            android:title="@string/menu_schedules" />
        <item
            android:id="@+id/navigation_menu_item_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
    </group>

    <group android:id="@+id/menu_setting">
        <item
            android:id="@+id/navigation_menu_item_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting" />
    </group>

</menu>
