<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/streakColorPrimary"
    android:orientation="vertical">

    <include
        android:id="@+id/top_layer"
        layout="@layout/layout_action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/sign_up_nick"
            android:textColor="@color/textColor"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_bg"
                android:gravity="center|left"
                android:hint="@string/sign_up_nick_hint"
                android:inputType="text"
                android:paddingVertical="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="40dp"
                android:textColorHint="@color/join_hint_color"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btn_name_check"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/common_main_btn_n"
                android:text="@string/button_duplicate_text"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/sign_up_gender_hint2"
            android:textColor="@color/textColor"
            android:textSize="14dp" />

        <RadioGroup
            android:id="@+id/radio_group_sex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-5dp"
            android:checkedButton="@+id/rg_btn_male"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rg_btn_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/join_male_img" />

            <RadioButton
                android:id="@+id/rg_btn_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/join_female_img" />
        </RadioGroup>
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </FrameLayout>

        </LinearLayout>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/sign_up_height"
            android:textColor="@color/textColor"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:hint="@string/sign_up_height_hint"
            android:inputType="number"
            android:padding="5dp"
            android:textColorHint="@color/join_hint_color"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/sign_up_weight"
            android:textColor="@color/textColor"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:hint="@string/sign_up_weight_hint"
            android:inputType="number"
            android:padding="5dp"
            android:textColorHint="@color/join_hint_color"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/sign_up_age"
            android:textColor="@color/textColor"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:hint="@string/sign_up_age_hint"
            android:padding="5dp"
            android:inputType="number"
            android:textColorHint="@color/join_hint_color"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/sign_up_nick"
            android:textColor="@color/textColor"
            android:textSize="14dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_region"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_bg"
                android:gravity="center|left"
                android:paddingVertical="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="40dp"
                android:text="@string/sign_up_location_hint"
                android:textColor="@color/join_hint_color"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btn_region"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/common_main_btn_n"
                android:text="@string/button_confirm_choose"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

        </FrameLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/common_main_btn_n"
            android:text="@string/sign_up_complete"
            android:textColor="@android:color/white"
            android:textSize="16dp" />
    </LinearLayout>

    <!--<ImageView
        android:id="@+id/iv_shadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/top_layer"
        android:background="@drawable/shape_shadow" />-->

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/iv_shadow">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            &lt;!&ndash;<ImageButton
                android:id="@+id/iv_profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:background="@null"
                app:srcCompat="@drawable/ic_account_circlel" />&ndash;&gt;

            <TextView
                android:id="@+id/tv_nick_label"
                style="@style/sign_up_label_text"
                android:layout_below="@+id/iv_profile_image"
                android:text="@string/sign_up_nick" />

            <LinearLayout
                android:id="@+id/nick_layer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_nick_label"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_nick"
                    style="@style/sign_up_edit_text"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:hint="@string/sign_up_nick_hint"
                    android:inputType="text" />

                <Button
                    android:id="@+id/btn_nick_check"
                    style="@style/side_button_style"
                    android:text="@string/button_confirm_text" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_height_label"
                style="@style/sign_up_label_text"
                android:layout_below="@+id/nick_layer"
                android:text="@string/sign_up_height" />

            <EditText
                android:id="@+id/et_height"
                style="@style/sign_up_edit_text"
                android:layout_below="@+id/tv_height_label"
                android:hint="@string/sign_up_height_hint"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/tv_weight_label"
                style="@style/sign_up_label_text"
                android:layout_below="@+id/et_height"
                android:text="@string/sign_up_weight" />

            <EditText
                android:id="@+id/et_weight"
                style="@style/sign_up_edit_text"
                android:layout_below="@+id/tv_weight_label"
                android:hint="@string/sign_up_weight_hint"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/tv_age_label"
                style="@style/sign_up_label_text"
                android:layout_below="@+id/et_weight"
                android:text="@string/sign_up_age" />

            <EditText
                android:id="@+id/et_age"
                style="@style/sign_up_edit_text"
                android:layout_below="@+id/tv_age_label"
                android:hint="@string/sign_up_age_hint"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/tv_sex_label"
                style="@style/sign_up_label_text"
                android:layout_below="@+id/et_age"
                android:text="@string/sign_up_gender" />

            <RadioGroup
                android:id="@+id/radio_group_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_sex_label"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/check_male"
                    style="@style/gender_radio_btn"
                    android:checked="true"
                    android:text="@string/man" />

                <RadioButton
                    android:id="@+id/check_female"
                    style="@style/gender_radio_btn"
                    android:text="@string/woman" />

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv_location_label"
                style="@style/sign_up_label_text"
                android:layout_below="@+id/radio_group_sex"
                android:text="@string/sign_up_location" />

            <LinearLayout
                android:id="@+id/layer_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_location_label"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_region"
                    style="@style/sign_up_edit_text"
                    android:layout_below="@+id/tv_location_label"
                    android:layout_weight="1"
                    android:hint="@string/sign_up_location_hint" />

                <Button
                    android:id="@+id/btn_region_search"
                    style="@style/side_button_style"
                    android:text="@string/button_search_text" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_up"
                style="@style/main_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layer_region"
                android:layout_marginTop="8dp"
                android:text="@string/sign_up_complete" />

        </RelativeLayout>

    </ScrollView>-->
</LinearLayout>
