<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_bg"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_actionbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:foregroundGravity="center">

        </android.support.v7.widget.Toolbar>

        <ImageView

            style="@style/top_divide"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:background="@drawable/common_divideline" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_input_add_plan_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_exercise_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_set_work"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_count_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/schedules_count"
                android:textColor="@android:color/black"
                android:textSize="30dp" />


            <EditText
                android:id="@+id/et_count_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:inputType="number"
                android:textColorHint="@color/join_hint_color"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_kg_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/schedules_kg"
                android:textColor="@android:color/black"
                android:textSize="30dp" />


            <EditText
                android:id="@+id/et_kg_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:inputType="number"
                android:textColorHint="@color/join_hint_color"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_rest_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/schedules_rest"
                android:textColor="@android:color/black"
                android:textSize="30dp" />


            <EditText
                android:id="@+id/et_rest_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:inputType="number"

                android:textColorHint="@color/join_hint_color"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_set_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/schedules_set"
                android:textColor="@android:color/black"
                android:textSize="30dp" />


            <EditText
                android:id="@+id/et_set_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:inputType="number"
                android:textColorHint="@color/join_hint_color"
                android:textSize="30dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_exercise_plan_add"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_set_work"
            android:gravity="center"
            android:text="추가"
            android:textColor="@android:color/white"
            android:textSize="40dp" />


    </LinearLayout>

</LinearLayout>